<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/ManagePage">


    <fragment
        android:id="@+id/fragment3"
        android:name="com.bignerdranch.android.personaltrainer.LoginFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ManageTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="80dp"
        android:text="@string/ManageText" />

    <Button
        android:id="@+id/NewCustomerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/NewCustomer"
        />
    <Button
        android:id="@+id/ViewCustomerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/ViewCustomers"
        />
    <Button
        android:id="@+id/NewSessionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/NewSession"
        />
    <Button
        android:id="@+id/UpcomingSessionsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/UpcomingSessions"
        />


</LinearLayout>